fix: 70% while wrap was better

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ i {
 }
 
 @media (max-width: 768px) {
-	.section { width: 50%; }
+	.section { width: 70%; }
 }
 
 .section-profile {
